--- a/src/style.css
+++ b/src/style.css
@@ -39,13 +39,44 @@ body{
     
 }
 
+.date-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.datepicker {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  padding-right: 40px; /* add space for icon */
+  font-size: 16px;
+  position: relative;
+  z-index: -99;
+}
+
+/* Hide native icon in all browsers */
 .datepicker::-webkit-calendar-picker-indicator {
-    background-image: url(./assets/icon/calendar.png);
-    background-size: 24px;
-    background-position: right center;
-    cursor: pointer;
-    height: 24px;
-    width: 24px;
+  opacity: 0;
+  display: none;
+  appearance: none;
+}
+
+.datepicker::-webkit-inner-spin-button,
+.datepicker::-webkit-clear-button {
+  display: none;
+}
+
+/* Custom icon */
+.calendar-icon {
+  position: absolute;
+  right: 10px;
+  top: 45%;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+  background: url("./assets/icon/calendar.png") no-repeat center;
+  background-size: contain;
+  z-index: 999;
 }
 
 
