--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ body{
     }
     
     h3{
-        @apply text-xl md:text-2xl lg:text-3xl lg:leading-10 font-semibold text-body
+        @apply text-lg sm:text-xl md:text-2xl lg:text-3xl lg:leading-10 font-semibold text-body
     }
     h4{
         @apply text-lg md:text-xl lg:text-2xl text-body
